--- a/A Business Website/style.css
+++ b/A Business Website/style.css
@@ -1,35 +1,47 @@
 @import url("fonts/droidsans.css");
 @import url("fonts/texgyre.css");
+@import url("fonts/texgyreadventor.css");
 
 * {
     padding: 0px;
     margin: 0px;
-    /* box-sizing: border-box; */
 }
 
 #navbar {
     background: url(images/topbg.jpg);
-    color: black;
     display: flex;
     justify-content: space-around;
-    align-items:flex-start;
     height: 200px;
-    padding-top: 40px;
-
+    padding-top: 20px;
+    margin-left: -200px;
+    margin-right: -200px;
+    padding-bottom: 20px;
+    font-size: 1.2rem;
 }
 
 nav h1 {
     color: red;
     text-shadow: wrgb(255, 255, 255) 1px 1px 1px;
+    margin-left: 70px;
+    padding-left: 50px;
 }
 
 #navbar h1.smallbusi {
-    font-family: TeXGyreAdventor, Arial, sans-serif;
-    font-size: 2rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif;
+    font-size: 1.2rem;
     font-weight: bold;
     margin-bottom: 10px;
+    color: rgb(211, 85, 55);
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+    padding: 20px 0px 0px 25px;
+    font: bold 1.6em TeXGyreAdventor, Arial, sans-serif;
 }
 
+#navbar h1 .business {
+    color: black;
+    font-weight: normal;
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+}
 #navbar ul li {
     display: inline;
     justify-content: center;
@@ -37,7 +49,11 @@ nav h1 {
     padding:0.5rem;
 }
 
-
+#navbar ul.link{
+    margin-right: 50px;
+    padding-right: 50px;
+    padding-top: 25px;
+}
 nav a {
     text-decoration: none;
     color:rgb(28, 95, 117);
@@ -47,7 +63,7 @@ nav a {
 }
 
 nav a:hover {
-    color: rgb(211, 85, 55);;
+    color: rgb(211, 85, 55);
 }
 
 body {
@@ -71,13 +87,13 @@ body {
 }
 
 .small h2 {
-    font-size:20px;
+    font-size: 1.3rem;
     color: rgb(137, 38, 15);
     text-shadow: rgb(249, 132, 101) 1px 1px 1px;
     margin-bottom: 20px;
     margin-top:30px;
     padding-right: 150px;
-    font-family: 'Droid Sans', Verdana, Geneva, sans-serif;
+    font-family: TeXGyreAdventor, Arial, sans-serif !important;
     font-weight: bold;
 }
 
@@ -97,8 +113,6 @@ nav, section, header, footer, article {
 #About {
     display: flex;
     background: url(images/mainheader.gif) no-repeat;
-    /* justify-content: space-between; */
-    align-items:flex-start;
     padding: 60px 40px;
     margin:-140px 0 0 0;
     height: 220px;
@@ -110,7 +124,120 @@ nav, section, header, footer, article {
     padding-right: 40px;
 }
 #page {
-    width:962px;
-	margin:auto;
-	padding:0 20px;
+    display: flex;
+    background-image: url(images/introcolsbg.jpg);
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    height: 211px;
+    margin-right: 15px;
+    margin-top: -20px;
+    margin-bottom: 10px;
+}
+
+#flex3col {
+    display: block;
+    /* padding: 40px 20px; */
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 20px;
+    /* width: 960px; */
+}
+
+#flex3col .what {
+    color: rgb(211, 85, 55);
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+    font-size: 1.3rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif;
+    margin-bottom: 20px;
+}
+
+#flex3col p{
+    font-size: 0.8rem;
+    color: rgb(90, 81, 67);
+    margin-top: -10px;
+}
+
+#b4service h2{
+    display: block;
+    color: rbg(37, 31, 27);
+    font-size: 1.1rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif;
+    text-align: center;
+    height: 60px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+#flex3col2nd {
+    display: block;
+    /* padding: 40px 20px; */
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    /* width: 960px; */
+}
+
+#flex3col2nd .our {
+    color: rgb(211, 85, 55);
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+    font-size: 1.3rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif;
+    margin-bottom: 20px;
+}
+
+#flex3col2nd p{
+    font-size: 0.8rem;
+    color: rgb(90, 81, 67);
+    margin-top: -10px;
+}
+
+#flex3col3rd {
+    display: block;
+    /* padding: 40px 20px; */
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    /* width: 960px; */
+}
+
+#flex3col3rd .why {
+    color: rgb(211, 85, 55);
+    text-shadow: rgb(255, 255, 255) 1px 1px 1px;
+    font-size: 1.3rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif;
+    margin-bottom: 20px;
+}
+
+#flex3col3rd p{
+    font-size: 0.8rem;
+    color: rgb(90, 81, 67);
+    margin-top: -10px;
+}
+
+#whatmakes {
+    display: block;
+    background-image: url(images/graybgtop.gif);
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    text-align: center;
+    height: 60px;
+    margin-right: 15px;
+    margin-top: 10px;
+    font-size: 1.2rem;
+    font-family: 'TeXGyreAdventor', Arial, sans-serif !important;
+    font-weight: bold;
+}
+
+#page2 {
+    display: flex;
+    /* background-image: url(images/introcolsbg.jpg);
+    background-repeat: no-repeat; */
+    background-position: 20px center;
+    height: 211px;
+    margin-right: 15px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    
 }
